clusters/korriban/infrastructure/istio/release.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    app.kubernetes.io/name: istio
    app.kubernetes.io/part-of: istio
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    istio.io/rev: default
